# py-trim

./: README.md  pyproject.toml  trim.py
py_trim/: cli.py  main.py
src/trim/: cli.py
